# h078

./: analyzer.py  cli.py  config.yaml  generate_sample.py  loader.py  mapper.py  property.bat  property_map.html  pyproject.toml  requirements.txt  sample_property_data.csv
.property_cache/: analysis.csv  cleaned.csv  clustered.csv
property_analyzer/: analyzer.py  cli.py  cluster.py  mapper.py
