[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "property-analyzer"
version = "1.0.0"
description = "房地产投资潜力分析工具 - 租售比/涨幅/去化四维评分 + 交互式地图"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "folium>=0.14.0",
    "rich>=13.0.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "scipy>=1.10.0",
]

[project.scripts]
property = "property_analyzer.cli:cli"

[tool.setuptools.packages.find]
include = ["property_analyzer*"]
